# spess

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: client.rst  conf.py  config.rst  index.rst  models.rst  responses.rst
spess/: __init__.py  __main__.py  _backend.py  _json.py  _model_bases.py  _paged.py  backend.py  client.py  config.py  json.py  models.py  ratelimit.py  responses.py
spess/_generated/: client.py  models.py  responses.py
spessgen/: __main__.py  client.py  config.py  methods.py  models.py  spec.py  types.py  write_methods.py  write_types.py  writer.py
