[project]
name = 'spess'
version = '0.0'
requires-python = '>= 3.13'

dependencies = [
    'requests~=2.28',
    'rich~=13.3',
]

[project.scripts]

spess = 'spess.__main__:main'

[project.optional-dependencies]

dev = [
    'commonmark~=0.9.1',
    'mypy~=1.16',
    'pyhumps~=3.8',
    'types-commonmark~=0.9.1',
    'types-requests~=2.28',
]

doc = [
    'sphinx~=8.1',
    'sphinx-rtd-theme~=3.0',
]

[build-system]
requires = ['setuptools~=77.0', 'setuptools-scm~=8.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
version_scheme = 'release-branch-semver'

[tool.mypy]
packages = ['spess', 'spessgen']
